# pypatchmatch

./: CMakeLists.txt  LICENSE  compileMex.m  fimage.h  img.cc  img.h  patchmatch.pyx  patchmatchMex.cpp  patchmatch_simple.c  patchmatch_simple.cc  point.h  readme.txt  setup.py  test-patchmatch.py
iio/: CMakeLists.txt  Makefile
